k8s/develop/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: client-ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/service-upstream: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-client-dev"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - treeo-webapp-develop.xyz
        - www.treeo-webapp-develop.xyz
      secretName: treoo-client-develop-com
  rules:
    - host: treeo-webapp-develop.xyz
      http:
        paths:
          - path: /
            backend:
              serviceName: client-cluster-ip-service
              servicePort: 3000
    - host: www.treeo-webapp-develop.xyz
      http:
        paths:
          - path: /
            backend:
              serviceName: client-cluster-ip-service
              servicePort: 3000
